HDC host Promotional Page CSS 3

--- a/hdc-host/index.html
+++ b/hdc-host/index.html
@@ -110,7 +110,7 @@
                     <input type="submit" value="Procurar domínio">
                 </form>
             </section>
-            <section class="searchdomain-container">
+            <section class="contact-container">
                 <h2>Mande uma mensagem</h2>
                 <p>Envia sua mensagem que em até 2 horas um profissional entrará em contato</p>
                 <form>
